<resources>
    <string name="app_name">LoginUI</string>
    <string name="create_your_simple_account">Create your simple Account</string>
    <string name="input_your_full_name">Input your full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="good_morning_temi">Good Morning Temi</string>
    <string name="search">Search</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="logout">LOGOUT</string>
    <string name="yoga">Yoga</string>
    <string name="meditation">Meditation</string>
    <string name="exercises">Exercises</string>
    <string name="your_best_gym">Your best gym</string>
    <string name="gymnasium">Gymnasium</string>
    <string name="code">code</string>
    <string name="verification">verification</string>
    <string name="enter_one_time_password_sent_to_your_email">Enter one time password sent to your email</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="new_credentials">new\ncredentials</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified!\nSet your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">update</string>
    <string name="password_updated">password\nupdated</string>
    <string name="your_password_has_been_updated">Your password has been updated!</string>
    <string name="login">login</string>
    <string name="show_password">SHOW PASSWORD</string>
    <string name="forget_password">forget\npassword</string>
    <string name="provide_your_account_email_for_which_you_want_to_reset_your_password">Provide your account email for which you want to reset your password!</string>
    <string name="next">next</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="good_day">Good day</string>
    <string name="temitope">Temitope</string>
    <string name="about_us">About Us</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome_back_a_new_day_a_new_activity">Welcome Back</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="a_new_day_with_a_new_activity">A new day, with a new activity</string>
    <string name="this_app_is_developed_majorly_to_help_you_in_your_every_day_activity_research_over_93_live_a_life_without_bothering_to_check_if_its_a_balanced_life_or_not_with_the_help_of_this_mobile_app_you_can_now_perform_some_exercises_by_timing_yourself_moreso_it_gives_you_the_opportunity_to_check_you_diet_and_weight_being_lost_i_recommend_you_using_this_app_daily_and_sharing_it_among_your_friends_thanks_for_downloading">This app is developed majorly to help you in your every day activity. Research over 93% live a life without bothering to check if its a balanced life or not. With the help of this mobile app, you can now perform some exercises by timing yourself. Moreso, it gives you the opportunity to check you diet and weight being lost. I recommend you using this app daily and sharing it among your friends. Thanks for downloading</string>
    <string name="developer_temitope_aroyewon">Developer: Temitope Aroyewon</string>
    <string name="contact">Contact Me:</string>
    <string name="enter_exercise_name_here">Enter exercise name here</string>
    <string name="a_link_has_been_sent_to_your_email">A link has been sent to your email.</string>
    <string name="password_sent">password sent</string>
    <string name="go_back_to_home">Go back to Home</string>
    <string name="input_the_type_of_your_exercise_here">Input the type of your exercise here</string>
    <string name="enter">ENTER</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="stop">stop</string>
    <string name="yoga_collections">YOGA collections</string>
    <string name="yoga_pictures">Yoga pictures</string>
    <string name="yoga_activities">yoga activities</string>
    <string name="welcome_to_the_meditation_zone">Welcome to the Meditation Zone</string>
    <string name="kindly_select_the_categories_of_meditation_you_want_to_have">Kindly select the categories of Meditation you want to have</string>
    <string name="mindfulness_meditation">Mindfulness Meditation</string>
    <string name="spiritual_meditation">Spiritual Meditation</string>
    <string name="focused_meditation">Focused Meditation</string>
    <string name="movement_meditation">Movement Meditation</string>
    <string name="mindfulness_meditation_originates_from">Mindfulness Meditation originates from Buddhist teachings and is the most popular meditation technique in the West. In mindfulness meditation, you pay attention to your thoughts as they pass through your mind. You don’t judge the thoughts or become involved with them. You simply observe and take note of any patterns. This practice combines concentration with awareness.\nThis type of meditation is good for people who don’t have a teacher to guide them, as it can be easily practiced alone.</string>
    <string name="start_meditation">start meditation</string>
    <string name="spiritual_meditation_originates_from">Spiritual meditation is used in Eastern religions, such as Hinduism and Daoism, and in Christian faith. It’s similar to prayer in that you reflect on the silence around you and seek a deeper connection with your God or Universe.\nSpiritual meditation can be practiced at home or in a place of worship. This practice is beneficial for those who thrive in silence and seek spiritual growth.</string>
    <string name="focused_meditation_involves">Focused meditation involves concentration using any of the five senses. For example, you can focus on something internal, like your breath, or you can bring in external influences to help focus your attention. Try counting mala beads, listening to a gong, or staring at a candle flame.

This practice may be simple in theory, but it can be difficult for beginners to hold their focus for longer than a few minutes at first. If your mind does wander, it’s important to come back to the practice and refocus.\nAs the name suggests, this practice is ideal for anyone who requires additional focus in their life.</string>
    <string name="although">Although most people think of yoga when they hear movement meditation, this practice may include walking through the woods, gardening, qigong, and other gentle forms of motion. It’s an active form of meditation where the movement guides you. \nMovement meditation is good for people who find peace in action and prefer to let their minds wander.</string>
    <string name="transcendental_meditation">Transcendental Meditation</string>
    <string name="transcendental_is">Transcendental meditation is the most popular type of meditation around the world, and it’s the most scientifically studied. This practice is more customizable than mantra meditation, using a mantra or series of words that are specific to each practitioner.\nThis practice is for those who like structure and are serious about maintaining a meditation practice.</string>
    <string name="how_to_get_started">How to get Started</string>
    <string name="the_best">The easiest way to begin is to sit quietly and focus on your breath. An old Zen saying suggests, “You should sit in meditation for twenty minutes every day — unless you\'re too busy. Then you should sit for an hour.\nAll kidding aside, it’s best to start in small moments of time, even five or ten minutes, and grow from there.</string>
    <string name="body_mass_nindex_bmi">Body Mass\nIndex (BMI)</string>
    <string name="in_order_to">In order to determine how much weight we have gained or lost as regards our daily diets and exercises, we make use of Body Mass Index to capture it.\nKindly input your current weight (Kg) and your height (m) in the box below:</string>
    <string name="cm">m</string>
    <string name="kg">kg</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="calculate_bmi">Calculate bmi</string>
    <string name="your_body_mass_index_is">Your Body Mass Index is</string>
    <string name="yhogar">Yhogar</string>
</resources>
