<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietChartActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_layout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/bmiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_mass_nindex_bmi"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:textSize="27sp"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textBMILabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/in_order_to"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    <FrameLayout
        android:id="@+id/textBMIFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textBMILabel"
        android:background="@drawable/bmi_frame_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="17sp"
                android:textColor="@color/colorBlack"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/weight_background"
                    android:imeOptions="actionNext"
                    android:gravity="center"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:text="@string/kg"
                    android:textSize="15sp"
                    android:background="@drawable/weight_background"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/weightEditText"
                    app:layout_constraintTop_toTopOf="@id/weightEditText"
                    app:layout_constraintBottom_toBottomOf="@id/weightEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/height"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/heightEditText"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/weight_background"
                        android:imeOptions="actionDone"
                        android:gravity="center"
                        tools:ignore="MissingConstraints"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:text="@string/cm"
                        android:textSize="15sp"
                        android:background="@drawable/weight_background"
                        android:textColor="@color/colorBlack"
                        android:gravity="center"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toEndOf="@id/heightEditText"
                        app:layout_constraintTop_toTopOf="@id/heightEditText"
                        app:layout_constraintBottom_toBottomOf="@id/heightEditText"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/calculateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/calculate_bmi"
                android:textSize="16sp"
                android:textStyle="bold"/>

            </LinearLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/textBMIFrameLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/bmiResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/your_body_mass_index_is"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/bmiResultText"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/bmiResultText"
            app:layout_constraintBottom_toBottomOf="@id/bmiResultText"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/resultType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmiResultText"
            android:layout_marginTop="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/goToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/go_back_to_home"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/goToHome"
        app:layout_constraintBottom_toBottomOf="@id/goToHome"
        app:layout_constraintStart_toStartOf="@id/goToHome"
        app:layout_constraintEnd_toEndOf="@id/goToHome"/>

</androidx.constraintlayout.widget.ConstraintLayout>