<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="10dp"
    tools:context=".ExerciseCountDown">

    <ImageView
        android:id="@+id/backOption"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bodyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backOption"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/exerciseType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/input_the_type_of_your_exercise_here"
            android:elevation="7dp"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/exercise_type_background"
            tools:ignore="MissingConstraints"
            tools:targetApi="lollipop"
            android:autofillHints="true" />

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/exerciseType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/enterBtn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="66sp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bodyLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/start_reset_stop" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/reset"
            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="@color/colorAccent"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/stop"
            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/goToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/go_back_to_home"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/goToHome"
        app:layout_constraintBottom_toBottomOf="@id/goToHome"
        app:layout_constraintStart_toStartOf="@id/goToHome"
        app:layout_constraintEnd_toEndOf="@id/goToHome"/>

</androidx.constraintlayout.widget.ConstraintLayout>