<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:layout_gravity="center"
    tools:context=".PasswordUpdated">

    <TextView
        android:id="@+id/textPasswordUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_sent"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <View
        android:id="@+id/successfulIconSupporter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPasswordUpdated"
        android:layout_marginTop="20dp"
        android:background="@drawable/success_oval"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_successful"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@id/successfulIconSupporter"
        app:layout_constraintEnd_toEndOf="@id/successfulIconSupporter"
        app:layout_constraintTop_toTopOf="@id/successfulIconSupporter"
        app:layout_constraintBottom_toBottomOf="@id/successfulIconSupporter"/>

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_link_has_been_sent_to_your_email"
        app:layout_constraintTop_toBottomOf="@id/successfulIconSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
         android:textColor="@color/colorBlack"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/textLabel"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        android:layout_marginTop="25dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>